--- a/Client/views/register.ejs
+++ b/Client/views/register.ejs
@@ -5,8 +5,8 @@
     <meta name="viewport"
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <script src="../scripts/register.js"></script>
     <script src="../scripts/validateForm.js"></script>
+    <script src="../scripts/register.js"></script>
     <link rel="stylesheet" href="../styles/register-styles.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
@@ -15,7 +15,7 @@
 </head>
 <body>
     <div id="form-box" class="login-box rounded p-4">
-        <form id="login-form" class="row g-3 needs-validation" novalidate>
+        <form id="registerForm" class="row g-3 needs-validation" novalidate>
             <!--NOMBRE/APELLIDO-->
             <div class="w-100">
                 <label for="validationCustom01" class="form-label">Nombre</label>
