--- a/Client/styles/register-styles.css
+++ b/Client/styles/register-styles.css
@@ -4,12 +4,26 @@ body {
     height: 100vh;
     overflow-y: hidden;
 
+    background: #2A7B9B;
+    background: linear-gradient(90deg,rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(237, 221, 83, 1) 100%);
+}
+
+#alert-container {
+    position: absolute;
+    display: flex;
+    justify-content: flex-end;
+    align-items: flex-start;
+    width: 100%;
+    height: 100%;
+    padding-top: 25px;
+    padding-right: 25px;
+}
+
+.form-container {
+    height: 100%;
     display: flex;
     justify-content: center;
     align-items: center;
-
-    background: #2A7B9B;
-    background: linear-gradient(90deg,rgba(42, 123, 155, 1) 0%, rgba(87, 199, 133, 1) 50%, rgba(237, 221, 83, 1) 100%);
 }
 
 #form-box {
@@ -27,6 +41,7 @@ body {
     margin: 0 !important;
     background: teal;
     border: none;
+    z-index: 500;
 }
 
 #submit-button > button:hover {
