--- a/Client/views/login.ejs
+++ b/Client/views/login.ejs
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="../scripts/validateForm.js"></script>
-    <script src="../scripts/login.js"></script>
+    <script type="module" src="../scripts/login.js"></script>
     <link rel="stylesheet" href="../styles/login-styles.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
@@ -14,36 +14,39 @@
     <title>Iniciar Sesión</title>
 </head>
 <body>
-    <div id="form-box" class="login-box p-4 rounded w-25">
-        <form id="loginForm" class="row g-3 needs-validation" novalidate>
-            <div class="col-auto w-100">
-                <label for="validationCustom01" class="form-label">Usuario</label>
-                <div class="input-group has-validation">
-                    <span class="input-group-text text-black-50" id="inputGroupPrepend">
-                        <i class="bi bi-person-circle"></i>
-                    </span>
-                    <input type="text" placeholder="ejemplo@ejemplo.com" class="form-control rounded-end" id="validationCustom01" aria-describedby="inputGroupPrepend" required>
-                    <div class="invalid-feedback">
-                        Usuario requerido.
+    <div id="alert-container"></div>
+    <div class="form-container">
+        <div id="form-box" class="login-box p-4 rounded w-25">
+            <form id="loginForm" class="row g-3 needs-validation" novalidate>
+                <div class="col-auto w-100">
+                    <label for="validationCustom01" class="form-label">Usuario</label>
+                    <div class="input-group has-validation">
+                        <span class="input-group-text text-black-50" id="inputGroupPrepend">
+                            <i class="bi bi-person-circle"></i>
+                        </span>
+                        <input type="text" placeholder="ejemplo@ejemplo.com" class="form-control rounded-end" id="validationCustom01" aria-describedby="inputGroupPrepend" required>
+                        <div class="invalid-feedback">
+                            Usuario requerido.
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-auto w-100">
-                <label for="validationCustom02" class="form-label">Contraseña</label>
-                <div class="input-group has-validation">
-                    <span class="input-group-text text-black-50" id="inputGroupPrepend">
-                        <i class="bi bi-key-fill"></i>
-                    </span>
-                    <input type="password" placeholder="Contraseña" class="form-control rounded-end" id="validationCustom02" aria-describedby="inputGroupPrepend" required>
-                    <div class="invalid-feedback">
-                        Introduce una contraseña correcta.
+                <div class="col-auto w-100">
+                    <label for="validationCustom02" class="form-label">Contraseña</label>
+                    <div class="input-group has-validation">
+                        <span class="input-group-text text-black-50" id="inputGroupPrepend">
+                            <i class="bi bi-key-fill"></i>
+                        </span>
+                        <input type="password" placeholder="Contraseña" class="form-control rounded-end" id="validationCustom02" aria-describedby="inputGroupPrepend" required>
+                        <div class="invalid-feedback">
+                            Introduce una contraseña correcta.
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div id="submit-button" class="col-auto w-100">
-                <button type="submit" id="loginForm" class="btn btn-primary mb-3">Acceder</button>
-            </div>
-        </form>
+                <div id="submit-button" class="col-auto w-100">
+                    <button type="submit" id="loginForm" class="btn btn-primary mb-3">Acceder</button>
+                </div>
+            </form>
+        </div>
     </div>
 </body>
 </html>
