--- a/Client/views/register.ejs
+++ b/Client/views/register.ejs
@@ -6,7 +6,7 @@
           content="width=device-width, user-scalable=no, initial-scale=1.0, maximum-scale=1.0, minimum-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <script src="../scripts/validateForm.js"></script>
-    <script src="../scripts/register.js"></script>
+    <script type="module" src="../scripts/register.js"></script>
     <link rel="stylesheet" href="../styles/register-styles.css"/>
     <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/css/bootstrap.min.css" rel="stylesheet" integrity="sha384-sRIl4kxILFvY47J16cr9ZwB07vP4J8+LH7qKQnuqkuIAvNWLzeN8tE5YBujZqJLB" crossorigin="anonymous">
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.8/dist/js/bootstrap.bundle.min.js" integrity="sha384-FKyoEForCGlyvwx9Hj09JcYn3nv7wiPVlz7YYwJrWVcXK/BmnVDxM+D2scQbITxI" crossorigin="anonymous"></script>
@@ -14,73 +14,76 @@
     <title>Registro</title>
 </head>
 <body>
-    <div id="form-box" class="login-box rounded p-4">
-        <form id="registerForm" class="row g-3 needs-validation" novalidate>
-            <!--NOMBRE/APELLIDO-->
-            <div class="w-100">
-                <label for="validationCustom01" class="form-label">Nombre</label>
-                <div class="input-group has-validation">
-                        <span class="input-group-text text-black-50" id="inputGroupPrepend">
-                            <i class="bi bi-person-circle"></i>
-                        </span>
-                    <input type="text" placeholder="Nombre" class="form-control rounded-end" id="validationCustom01" aria-describedby="inputGroupPrepend" required>
-                    <div class="invalid-feedback">
-                        Nombre requerido!.
+    <div id="alert-container"></div>
+    <div class="form-container">
+        <div id="form-box" class="login-box rounded p-4">
+            <form id="registerForm" class="row g-3 needs-validation" novalidate>
+                <!--NOMBRE/APELLIDO-->
+                <div class="w-100">
+                    <label for="validationCustom01" class="form-label">Nombre</label>
+                    <div class="input-group has-validation">
+                            <span class="input-group-text text-black-50" id="inputGroupPrepend">
+                                <i class="bi bi-person-circle"></i>
+                            </span>
+                        <input type="text" placeholder="Nombre" class="form-control rounded-end" id="validationCustom01" aria-describedby="inputGroupPrepend" required>
+                        <div class="invalid-feedback">
+                            Nombre requerido!.
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div class="col-auto w-100">
-                <label for="apellido" class="form-label">Apellido</label>
-                <div class="input-group">
-                        <span class="input-group-text text-black-50" id="inputGroupPrepend">
-                            <i class="bi bi-person-circle"></i>
-                        </span>
-                    <input type="text" placeholder="Apellido" class="form-control rounded-end" id="apellido" aria-describedby="inputGroupPrepend">
-                </div>
-            </div>
-            <!--USUARIO-->
-            <div class="col-auto w-100">
-                <label for="validationCustom03" class="form-label">Usuario</label>
-                <div class="input-group has-validation">
-                    <span class="input-group-text text-black-50" id="inputGroupPrepend">
-                        <i class="bi bi-at"></i>
-                    </span>
-                    <input type="text" placeholder="Usuario" class="form-control rounded-end" id="validationCustom03" aria-describedby="inputGroupPrepend" required>
-                    <div class="invalid-feedback">
-                        Usuario requerido!.
+                <div class="col-auto w-100">
+                    <label for="apellido" class="form-label">Apellido</label>
+                    <div class="input-group">
+                            <span class="input-group-text text-black-50" id="inputGroupPrepend">
+                                <i class="bi bi-person-circle"></i>
+                            </span>
+                        <input type="text" placeholder="Apellido" class="form-control rounded-end" id="apellido" aria-describedby="inputGroupPrepend">
                     </div>
                 </div>
-            </div>
-            <!--CORREO-->
-            <div class="col-auto w-100">
-                <label for="validationCustom01" class="form-label">Correo Electrónico</label>
-                <div class="input-group has-validation">
+                <!--USUARIO-->
+                <div class="col-auto w-100">
+                    <label for="validationCustom03" class="form-label">Usuario</label>
+                    <div class="input-group has-validation">
                         <span class="input-group-text text-black-50" id="inputGroupPrepend">
-                            <i class="bi bi-envelope-fill"></i>
+                            <i class="bi bi-at"></i>
                         </span>
-                    <input type="email" placeholder="ejemplo@ejemplo.com" class="form-control rounded-end" id="validationCustom01" aria-describedby="inputGroupPrepend" required>
-                    <div class="invalid-feedback">
-                        Utiliza un correo válido.
+                        <input type="text" placeholder="Usuario" class="form-control rounded-end" id="validationCustom03" aria-describedby="inputGroupPrepend" required>
+                        <div class="invalid-feedback">
+                            Usuario requerido!.
+                        </div>
                     </div>
                 </div>
-            </div>
-            <!--CONTRASEÑA-->
-            <div class="col-auto w-100">
-                <label for="validationCustom02" class="form-label">Contraseña</label>
-                <div class="input-group has-validation">
-                        <span class="input-group-text text-black-50" id="inputGroupPrepend">
-                            <i class="bi bi-key-fill"></i>
-                        </span>
-                    <input type="password" placeholder="Contraseña" class="form-control rounded-end" id="validationCustom02" aria-describedby="inputGroupPrepend" required>
-                    <div class="invalid-feedback">
-                        Contraseña requerida.
+                <!--CORREO-->
+                <div class="col-auto w-100">
+                    <label for="validationCustom01" class="form-label">Correo Electrónico</label>
+                    <div class="input-group has-validation">
+                            <span class="input-group-text text-black-50" id="inputGroupPrepend">
+                                <i class="bi bi-envelope-fill"></i>
+                            </span>
+                        <input type="email" placeholder="ejemplo@ejemplo.com" class="form-control rounded-end" id="validationCustom01" aria-describedby="inputGroupPrepend" required>
+                        <div class="invalid-feedback">
+                            Utiliza un correo válido.
+                        </div>
                     </div>
                 </div>
-            </div>
-            <div id="submit-button" class="col-auto w-100">
-                <button type="submit" class="btn btn-primary mb-3">Acceder</button>
-            </div>
-        </form>
+                <!--CONTRASEÑA-->
+                <div class="col-auto w-100">
+                    <label for="validationCustom02" class="form-label">Contraseña</label>
+                    <div class="input-group has-validation">
+                            <span class="input-group-text text-black-50" id="inputGroupPrepend">
+                                <i class="bi bi-key-fill"></i>
+                            </span>
+                        <input type="password" placeholder="Contraseña" class="form-control rounded-end" id="validationCustom02" aria-describedby="inputGroupPrepend" required>
+                        <div class="invalid-feedback">
+                            Contraseña requerida.
+                        </div>
+                    </div>
+                </div>
+                <div id="submit-button" class="col-auto w-100">
+                    <button type="submit" class="btn btn-primary mb-3">Acceder 2</button>
+                </div>
+            </form>
+        </div>
     </div>
 </body>
 </html>
