JWT verification added

--- a/Client/views/register.ejs
+++ b/Client/views/register.ejs
@@ -80,7 +80,7 @@
                     </div>
                 </div>
                 <div id="submit-button" class="col-auto w-100">
-                    <button type="submit" class="btn btn-primary mb-3">Acceder 2</button>
+                    <button type="submit" class="btn btn-primary mb-3">Acceder</button>
                 </div>
             </form>
         </div>
